--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.30.0
-pandas==2.0.0
-numpy==1.20.0
-plotly==5.15.0
-matplotlib==3.5.0
-seaborn==0.12.0 
+streamlit>=1.28.0
+pandas>=1.5.0
+numpy>=1.24.0
+plotly>=5.13.0
+matplotlib>=3.7.0
+seaborn>=0.12.0 
