--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-streamlit>=1.28.0
-pandas>=1.5.0
+streamlit==1.31.1
+pandas==2.2.0
 numpy>=1.24.0
-plotly>=5.13.0
+plotly==5.18.0
 matplotlib>=3.7.0
-seaborn>=0.12.0 
+seaborn>=0.12.0
+supabase==2.3.1 
