--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 streamlit==1.31.1
 pandas==2.2.0
-numpy>=1.24.0
+numpy==1.26.3
 plotly==5.18.0
 matplotlib>=3.7.0
 seaborn>=0.12.0
-supabase>=1.0.3
+supabase==2.3.4
 httpx>=0.25.0
-pydeck>=0.8.0 
+pydeck>=0.8.0
+python-dotenv==1.0.1 
