--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,6 @@ plotly==5.18.0
 matplotlib>=3.7.0
 seaborn>=0.12.0
 supabase==2.3.4
-httpx>=0.25.0
+httpx==0.25.2
 pydeck>=0.8.0
 python-dotenv==1.0.1 
